# template-fullstack

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yml  template.code-workspace
.cursor/rules/: backend.mdc  frontend.mdc  root.mdc
backend/: .env.example  Dockerfile  pyproject.toml  pyrightconfig.json
backend/src/apps/api/: main.py
backend/src/libs/: settings.py
backend/src/libs/dal/: base.py
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
infra/nginx/: nginx.conf
infra/nginx/conf.d/: default.conf
infra/postgres/init/: create-multiple-databases.sh
infra/prefect/: Dockerfile
