[project]
name = "app-backend"
version = "0.1.0"
description = "Backend — FastAPI, SQLAlchemy, Alembic"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary,pool]>=3.1.0",
    # Schemas
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Cache
    "redis>=5.0.0",
    # Pipelines
    "prefect>=3.0.0",
    # Observability
    "logfire>=0.50.0",
    # HTTP
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "basedpyright>=1.18.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
